# daycounter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  webapp.py
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  python-tests.yml
src/daycounter/: __init__.py  __main__.py  counter.py
templates/: index.html
tests/: __init__.py  test_counter.py
